--- a/hennkatenn.html
+++ b/hennkatenn.html
@@ -911,7 +911,7 @@
         <button class="btn-logout" data-logout>ログアウト</button>
       </div>
     </div>
-    <div class="container">
+    <div class="container" style="max-width:100%; padding:10px;">
       <div class="card">
         <div class="filter-section">
           <div class="filter-group">
