--- a/hennkatenn.html
+++ b/hennkatenn.html
@@ -805,7 +805,7 @@
       </div>
     </div>
 
-    <div class="container" style="max-width:800px;">
+    <div class="container" style="max-width:1400px;">
       <div class="card">
         <h2 style="margin-bottom:20px;color:#333;">計画変化点の登録（changepoints / type=planned）</h2>
 
@@ -814,7 +814,7 @@
             <div class="form-group">
               <label>起案部署<span class="required">*</span></label>
               <select id="planDepartment" required><option value="">選択してください</option></select>
-              <div class="hint">保存先：planneddepartment</div>
+              <div class="hint">保存先:planneddepartment</div>
             </div>
             <div class="form-group">
               <label>変化点分類<span class="required">*</span></label>
@@ -830,36 +830,37 @@
             </div>
           </div>
 
-          <div class="form-group">
-            <label>変化点発生部署<span class="required">*</span></label>
-            <select id="planDepartmentOccur" required><option value="">選択してください</option></select>
-            <div class="hint">保存先：department</div>
+          <div class="form-row">
+            <div class="form-group">
+              <label>変化点発生部署<span class="required">*</span></label>
+              <select id="planDepartmentOccur" required><option value="">選択してください</option></select>
+              <div class="hint">保存先:department</div>
+            </div>
+            <div class="form-group">
+              <label>対象ライン名<span class="required">*</span></label>
+              <input type="text" id="planLineName" list="lineList2" required placeholder="例: 94-300 / RL1 など">
+              <datalist id="lineList2"></datalist>
+              <div class="hint">保存先:lineName</div>
+            </div>
           </div>
 
-          <div class="form-group">
-            <label>対象ライン名<span class="required">*</span></label>
-            <input type="text" id="planLineName" list="lineList2" required placeholder="例: 94-300 / RL1 など">
-            <datalist id="lineList2"></datalist>
-            <div class="hint">保存先：lineName</div>
-          </div>
-
-          <div class="form-group">
-            <label>対象整理No</label>
-            <input type="text" id="planSerialNo" list="serialList2" placeholder="例: 6769">
-            <datalist id="serialList2"></datalist>
-            <div class="hint">保存先：serialNo</div>
+          <div class="form-row">
+            <div class="form-group">
+              <label>対象整理No</label>
+              <input type="text" id="planSerialNo" list="serialList2" placeholder="例: 6769">
+              <datalist id="serialList2"></datalist>
+              <div class="hint">保存先:serialNo</div>
+            </div>
+            <div class="form-group">
+              <label>切替え日（任意）</label>
+              <input type="date" id="planDate">
+              <div class="hint">保存先:occurrenceDate（切替え日）</div>
+            </div>
           </div>
 
           <div class="form-group">
             <label>変化点内容<span class="required">*</span></label>
             <textarea id="planContent" required placeholder="変化点の詳細内容を入力..."></textarea>
-          </div>
-
-          
-          <div class="form-group">
-            <label>切替え日（任意）</label>
-            <input type="date" id="planDate">
-            <div class="hint">保存先：occurrenceDate（切替え日）</div>
           </div>
 
 
