--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -55,7 +54,7 @@
     box-shadow: 0 4px 16px rgba(0,0,0,0.1);
   }
 
-  /* 整理No表示（超巨大） */
+  /* 整理No表示（シンプル版） */
   .seiriNoDisplay{
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     color:#fff;
@@ -105,76 +104,6 @@
     padding:0 20px;
   }
 
-  /* ========== ステータスバー（簡易版） ========== */
-  .statusBar{
-    background:#fff;
-    border-radius:16px;
-    padding:16px;
-    margin-bottom:16px;
-    border:2px solid #e5e7eb;
-    transition: all .35s ease;
-  }
-  .statusBar.status--RUNNING{ 
-    background:linear-gradient(90deg,#bbf7d0,#f0fdf4); 
-    border-color:#4ade80; 
-  }
-  .statusBar.status--TRY{ 
-    background:linear-gradient(90deg,#bfdbfe,#eff6ff); 
-    border-color:#60a5fa; 
-  }
-  .statusBar.status--ABNORMAL_STOP{ 
-    background:linear-gradient(90deg,#fecaca,#fef2f2); 
-    border-color:#f87171; 
-  }
-  .statusBar.status--PLAN_STOP{ 
-    background:linear-gradient(90deg,#fed7aa,#fff7ed); 
-    border-color:#fb923c; 
-  }
-  .statusBar.status--MATERIAL_CHANGE{ 
-    background:linear-gradient(90deg,#e9d5ff,#faf5ff); 
-    border-color:#c084fc; 
-  }
-  .statusBar.status--SETUP_CHANGE{ 
-    background:linear-gradient(90deg,#fde68a,#fefce8); 
-    border-color:#facc15; 
-  }
-  .statusBar.status--NOT_STARTED{ 
-    background:#f1f5f9; 
-    border-color:#cbd5e1; 
-  }
-
-  .statusMain{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    gap:12px;
-  }
-  .statusText{
-    font-size:20px;
-    font-weight:900;
-  }
-  .counterBox{
-    background:#000;
-    border-radius:12px;
-    padding:8px 12px;
-    box-shadow: inset 0 0 8px rgba(0,0,0,.8);
-  }
-  .counterLabel{
-    font-size:10px;
-    color:#9ca3af;
-    text-align:center;
-    margin-bottom:2px;
-  }
-  #goodCounter{
-    font-family: "DS-Digital","Digital-7","Orbitron", ui-monospace, monospace;
-    font-size:32px;
-    font-weight:700;
-    color:#00ff66;
-    text-align:center;
-    letter-spacing:0.08em;
-    text-shadow: 0 0 4px rgba(0,255,102,.9), 0 0 12px rgba(0,255,102,.6);
-  }
-
   /* ========== 進捗メーター ========== */
   .progressSection{
     background:#fff;
@@ -192,6 +121,51 @@
   .progressTitle{
     font-size:15px;
     font-weight:900;
+    display:flex;
+    align-items:center;
+    gap:8px;
+  }
+  .prodStatusBadge{
+    font-size:12px;
+    font-weight:900;
+    padding:4px 10px;
+    border-radius:12px;
+    border:1px solid transparent;
+  }
+  .prodStatusBadge.status--RUNNING{
+    background:#bbf7d0;
+    color:#166534;
+    border-color:#86efac;
+  }
+  .prodStatusBadge.status--TRY{
+    background:#bfdbfe;
+    color:#1e40af;
+    border-color:#93c5fd;
+  }
+  .prodStatusBadge.status--ABNORMAL_STOP{
+    background:#fecaca;
+    color:#991b1b;
+    border-color:#fca5a5;
+  }
+  .prodStatusBadge.status--PLAN_STOP{
+    background:#fed7aa;
+    color:#9a3412;
+    border-color:#fdba74;
+  }
+  .prodStatusBadge.status--MATERIAL_CHANGE{
+    background:#e9d5ff;
+    color:#6b21a8;
+    border-color:#d8b4fe;
+  }
+  .prodStatusBadge.status--SETUP_CHANGE{
+    background:#fde68a;
+    color:#854d0e;
+    border-color:#fde047;
+  }
+  .prodStatusBadge.status--NOT_STARTED{
+    background:#f1f5f9;
+    color:#475569;
+    border-color:#cbd5e1;
   }
   .progressNumbers{
     display:flex;
@@ -723,24 +697,12 @@
   <!-- 整理No + 製品画像カード -->
   <div class="displayCard">
     <div class="seiriNoDisplay">
-      <div class="seiriNoLabel">整理No</div>
       <div id="baseDisplay" class="seiriNoValue placeholder">未設定</div>
     </div>
     <div class="imageArea">
       <img id="productImage" alt="製品画像" />
       <div id="imgHint" class="imgHint">
         基準QRを読み込むと、整理Noで画像マスタを検索して表示します。
-      </div>
-    </div>
-  </div>
-
-  <!-- ステータス + 出来高 -->
-  <div id="statusBar" class="statusBar status--NOT_STARTED">
-    <div class="statusMain">
-      <div id="prodStateBig" class="statusText">未開始</div>
-      <div class="counterBox">
-        <div class="counterLabel">出来高</div>
-        <div id="goodCounter">0</div>
       </div>
     </div>
   </div>
@@ -760,7 +722,10 @@
   <!-- 進捗メーター -->
   <div class="progressSection" id="progressSection" style="display:none;">
     <div class="progressHeader">
-      <div class="progressTitle">📊 生産進捗</div>
+      <div class="progressTitle">
+        <span>📊 生産進捗</span>
+        <span id="prodStatusBadge" class="prodStatusBadge status--NOT_STARTED">未開始</span>
+      </div>
       <div class="progressNumbers">
         <span class="progressCurrent" id="progressCurrent">0</span>
         <span class="progressTarget">/ <span id="progressTarget">0</span></span>
@@ -937,9 +902,6 @@ const $lineSelect = document.getElementById("lineSelect");
 const $lineBadge = document.getElementById("lineBadge");
 const $bushoSelect = document.getElementById("bushoSelect");
 const $bushoBadge = document.getElementById("bushoBadge");
-const $statusBar = document.getElementById("statusBar");
-const $prodStateBig = document.getElementById("prodStateBig");
-const $goodCounter = document.getElementById("goodCounter");
 const $btnBackRunning = document.getElementById("btnBackRunning");
 const $btnTry = document.getElementById("btnTry");
 const $btnAbnormalStop = document.getElementById("btnAbnormalStop");
@@ -959,6 +921,7 @@ const $progressTarget = document.getElementById("progressTarget");
 const $progressBar = document.getElementById("progressBar");
 const $progressPercent = document.getElementById("progressPercent");
 const $progressStatus = document.getElementById("progressStatus");
+const $prodStatusBadge = document.getElementById("prodStatusBadge");
 
 /* ================== Utils ================== */
 function nowString(){
@@ -1074,7 +1037,6 @@ function showNoImage(html){
 }
 
 function updateCountersUI(){
-  $goodCounter.textContent = String(goodCount||0);
   updateProgressMeter();
 }
 
@@ -1156,13 +1118,20 @@ function statusKeyFromText(text){
 
 function renderProdStatus(){
   const key = statusKeyFromText(prodStatus);
-  $prodStateBig.textContent = prodStatus;
-  $statusBar.className = `statusBar status--${key}`;
+  
+  // ステータスバッジを更新
+  if($prodStatusBadge){
+    $prodStatusBadge.textContent = prodStatus;
+    $prodStatusBadge.className = `prodStatusBadge status--${key}`;
+  }
+  
+  // 背景色を更新
   document.body.classList.remove(
     "bg-NOT_STARTED","bg-RUNNING","bg-TRY","bg-ABNORMAL_STOP","bg-PLAN_STOP","bg-MATERIAL_CHANGE","bg-SETUP_CHANGE"
   );
   document.body.classList.add(`bg-${key}`);
   
+  // 状態ボタンのアクティブ状態を更新
   const setActive = (btn, on)=>btn.classList.toggle("active", !!on);
   setActive($btnBackRunning, prodStatus === PROD_STATUS.RUNNING);
   setActive($btnTry, prodStatus === PROD_STATUS.TRY);
