--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -104,6 +104,39 @@
     padding:0 20px;
   }
 
+  /* ========== シンプル出来高カウンター ========== */
+  .simpleCounterSection{
+    background:#fff;
+    border-radius:16px;
+    padding:20px;
+    margin-bottom:16px;
+    box-shadow:0 2px 8px rgba(0,0,0,0.1);
+    text-align:center;
+  }
+  .simpleCounterTitle{
+    font-size:14px;
+    color:#64748b;
+    font-weight:700;
+    margin-bottom:12px;
+  }
+  .simpleCounterValue{
+    font-size:72px;
+    font-weight:900;
+    color:#0b3b75;
+    line-height:1;
+    font-family:ui-monospace, monospace;
+  }
+  .simpleCounterUnit{
+    font-size:24px;
+    color:#64748b;
+    margin-left:8px;
+  }
+  .simpleCounterHint{
+    margin-top:12px;
+    font-size:12px;
+    color:#9ca3af;
+  }
+
   /* ========== 進捗メーター ========== */
   .progressSection{
     background:#fff;
@@ -719,6 +752,16 @@
     </button>
   </div>
 
+  <!-- シンプル出来高カウンター（計画数未設定時） -->
+  <div class="simpleCounterSection" id="simpleCounterSection" style="display:none;">
+    <div class="simpleCounterTitle">📊 出来高</div>
+    <div>
+      <span class="simpleCounterValue" id="simpleCounterValue">0</span>
+      <span class="simpleCounterUnit">個</span>
+    </div>
+    <div class="simpleCounterHint">計画数を設定すると進捗率が表示されます</div>
+  </div>
+
   <!-- 進捗メーター -->
   <div class="progressSection" id="progressSection" style="display:none;">
     <div class="progressHeader">
@@ -1042,11 +1085,19 @@ function updateCountersUI(){
 
 /* 進捗メーター更新 */
 function updateProgressMeter(){
+  const $simpleCounterSection = document.getElementById('simpleCounterSection');
+  const $simpleCounterValue = document.getElementById('simpleCounterValue');
+  
+  // 計画数が未設定の場合：シンプルカウンター表示
   if(!planQuantity || planQuantity <= 0){
     $progressSection.style.display = 'none';
+    $simpleCounterSection.style.display = 'block';
+    $simpleCounterValue.textContent = String(goodCount || 0);
     return;
   }
   
+  // 計画数が設定されている場合：進捗メーター表示
+  $simpleCounterSection.style.display = 'none';
   $progressSection.style.display = 'block';
   $progressCurrent.textContent = String(goodCount || 0);
   $progressTarget.textContent = String(planQuantity);
@@ -1278,6 +1329,7 @@ async function restoreFromFirebase(){
       baseQR = null;
       goodCount = 0;
       qtyPerKanban = null;
+      planQuantity = 0;
       updateCountersUI();
       setLock(false);
       renderProdStatus();
