--- a/abnreports.html
+++ b/abnreports.html
@@ -1885,48 +1885,55 @@ async function applyFilter(){
           </div>
         `;
 
-        const centerHtml = `
-          <div class="card-center">
-            <div class="card-content-section">
-              <div class="card-content-label">🚨 異常内容</div>
-              <div class="card-content-text">${item.anomalyContent||'-'}</div>
-            </div>
-            <div class="card-content-section">
-              <div class="card-content-label">🔧 現場対応</div>
-              <div class="card-content-text">${item.actionTaken||'-'}</div>
-            </div>
-            ${item.qualityResponse ? `
-              <div class="card-content-section">
-                <div class="card-content-label">✅ 品質対応</div>
-                <div class="card-content-text">${item.qualityResponse}</div>
-              </div>
-            ` : ''}
-            ${item.changePointCategory ? `
-              <div class="card-content-section" style="background:#e3f2fd;padding:10px;border-radius:6px;">
-                <div class="card-content-label" style="color:#1565c0;">🔄 変化点情報</div>
-                <div class="card-content-text">
-                  <strong>分類:</strong> ${item.changePointCategory}<br>
-                  ${item.changePointContent ? `<strong>内容:</strong> ${item.changePointContent}` : ''}
-                </div>
-              </div>
-            ` : ''}
-            ${item.status==='complete' && item.techRequest==='要請' ? `
-              <div class="card-tech-info">
-                ${item.techHandler ? `<div class="tech-info-item"><span class="tech-info-label">対応部署_処置者:</span><span class="tech-info-value">${item.techHandler}</span></div>` : ''}
-                ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
-                ${item.lifespan ? `<div class="tech-info-item"><span class="tech-info-label">命数:</span><span class="tech-info-value">${item.lifespan}</span></div>` : ''}
-                ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">処置方法:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
-                ${(item.recurrenceType==='再発' && item.measureStatus)
-                  ? `<div class="tech-info-item" style="grid-column:1/-1;">
-                       <span class="tech-info-label">対策状況:</span>
-                       <span class="tech-info-value">${item.measureStatus}</span>
-                     </div>`
-                  : ''
-                }
-              </div>
-            ` : ''}
-          </div>
-        `;
+// カードビューの中央カラム（centerHtml）に遡り項目を追加
+const centerHtml = `
+  <div class="card-center">
+    <div class="card-content-section">
+      <div class="card-content-label">🚨 異常内容</div>
+      <div class="card-content-text">${item.anomalyContent||'-'}</div>
+    </div>
+    <div class="card-content-section">
+      <div class="card-content-label">🔧 現場対応</div>
+      <div class="card-content-text">${item.actionTaken||'-'}</div>
+    </div>
+    ${item.traceback ? `
+      <div class="card-content-section">
+        <div class="card-content-label">🔄 遡り</div>
+        <div class="card-content-text">${item.traceback}</div>
+      </div>
+    ` : ''}
+    ${item.qualityResponse ? `
+      <div class="card-content-section">
+        <div class="card-content-label">✅ 品質対応</div>
+        <div class="card-content-text">${item.qualityResponse}</div>
+      </div>
+    ` : ''}
+    ${item.changePointCategory ? `
+      <div class="card-content-section" style="background:#e3f2fd;padding:10px;border-radius:6px;">
+        <div class="card-content-label" style="color:#1565c0;">🔄 変化点情報</div>
+        <div class="card-content-text">
+          <strong>分類:</strong> ${item.changePointCategory}<br>
+          ${item.changePointContent ? `<strong>内容:</strong> ${item.changePointContent}` : ''}
+        </div>
+      </div>
+    ` : ''}
+    ${item.status==='complete' && item.techRequest==='要請' ? `
+      <div class="card-tech-info">
+        ${item.techHandler ? `<div class="tech-info-item"><span class="tech-info-label">対応部署_処置者:</span><span class="tech-info-value">${item.techHandler}</span></div>` : ''}
+        ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
+        ${item.lifespan ? `<div class="tech-info-item"><span class="tech-info-label">命数:</span><span class="tech-info-value">${item.lifespan}</span></div>` : ''}
+        ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">処置方法:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
+        ${(item.recurrenceType==='再発' && item.measureStatus)
+          ? `<div class="tech-info-item" style="grid-column:1/-1;">
+               <span class="tech-info-label">対策状況:</span>
+               <span class="tech-info-value">${item.measureStatus}</span>
+             </div>`
+          : ''
+        }
+      </div>
+    ` : ''}
+  </div>
+`;
 
         const rightHtml = `
           <div class="card-right">
